Refactor main content layout to use fixed two-column grid

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         .main-content {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: 1fr 1fr;
             gap: 0;
             min-height: 600px;
         }
